fix bg-image on small screens

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,9 +9,8 @@ body{
     gap: 20px;
     height: 100vh;
     height: 100svh;
-    background-image: url(../images/2.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background: url(../images/2.jpg) no-repeat scroll center top transparent;
+    background-size: auto 100%;
     color: white;
 }
 .overlay{
